// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeedBanner renders correctly with a community and user 1`] = `
<View>
  <Image
    source={
      Object {
        "uri": "community.png",
      }
    }
  />
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    />
  </View>
  <PostPrompt
    currentUser={
      Object {
        "avatarUrl": "user.png",
        "firstName": [Function],
        "id": "2",
        "name": "John Wayne",
      }
    }
    newPost={[Function]}
  />
  <View />
</View>
`;

exports[`FeedBanner renders correctly with all=true, and no community or user 1`] = `
<View>
  <Image
    source={
      Object {
        "uri": undefined,
      }
    }
  />
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      All Communities
    </Text>
  </View>
  <PostPrompt
    currentUser={undefined}
    newPost={[Function]}
  />
</View>
`;

exports[`PostPrompt renders correctly with a user 1`] = `
<View>
  <TouchableOpacity
    activeOpacity={0.2}
    focusedOpacity={0.7}
    onPress={[Function]}
  >
    <Avatar
      avatarUrl="user.png"
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      John
      , what's on your mind?
    </Text>
  </TouchableOpacity>
</View>
`;
